@@ -10,7 +10,11 @@ default: local
 map: awk -F: '/^$GROUP:/ {print $2}' /etc/clustershell/groups
 all: awk -F: '/^all:/ {print $2}' /etc/clustershell/groups
 list:   awk -F: '/^\w/ {print $1}' /etc/clustershell/groups
-#reverse:
+
+[genders]
+map: nodeattr -n $GROUP
+all: nodeattr -n ALL
+list: nodeattr -l
 
 [slurm]
 map: sinfo -h -o "%N" -p $GROUP
