@@ -1,5 +1,0 @@
-"
-" Installed As: vim/ftdetect/clush.vim
-" $Id$
-"
-au BufNewFile,BufRead *clush.conf               setlocal filetype=clush
