@@ -1,0 +1,6 @@
+"
+" Installed As: vim/ftdetect/clustershell.vim
+" $Id$
+"
+au BufNewFile,BufRead *clush.conf               setlocal filetype=clushconf
+au BufNewFile,BufRead *groups.conf              setlocal filetype=groupsconf
